SERVER-49468 Kill and throw when OperationContexts are overwritten